:bug: Fix not centered hashtag in Album

--- a/src/styles/album.css
+++ b/src/styles/album.css
@@ -129,6 +129,10 @@
   width: fit-content;
 }
 
+.trackNumberCenter {
+  margin: 0 auto;
+}
+
 .horizontalRow {
   opacity: 0.1;
   width: 100%;
